--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-rate-limit": "^6.4.0",
     "express-validator": "^6.14.1",
@@ -20,8 +21,5 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.6",
     "xss-clean": "^0.1.1"
-  },
-  "devDependencies": {
-    "dotenv": "^16.0.1"
   }
 }
